# public/api/json/api-docs.json
@@ -72,9 +72,9 @@
             }
         },
         "securitySchemes": {
-            "acess_token": {
+            "access_token": {
                 "type": "apiKey",
-                "name": "acess_token",
+                "name": "access_token",
                 "in": "header"
             }
         }
